--- a/templates/testing.html
+++ b/templates/testing.html
@@ -18,30 +18,17 @@
 
 {% block body %}
 <form class="form_register" method="POST">
-    <p class="question">{{ question }}</p>
+    <p class="question">
+        {% for el in questions %}
+        {{ el.order_num }}.  {{ el.question }}
+        {% endfor %}
+    </p>
     <div>
-<!--    <table>-->
-<!--        <tr>-->
-            <br>
-            <input name="select" type="radio" id="first_answer"  value="1">
-            <label for="first_answer" class="answer">12</label>
-<!--        </tr>-->
-<!--        <tr>-->
+        {% for el in answers %}
             <br><br>
-            <input name="select" type="radio" id="second_answer"  value="2">
-            <label for="second_answer" class="answer">13</label>
-<!--        </tr>-->
-<!--        <tr>-->
-            <br><br>
-            <input name="select" type="radio" id="third_answer"  value="3" >
-            <label for="third_answer" class="answer">14</label>
-<!--        </tr>-->
-<!--        <tr>-->
-            <br><br>
-            <input name="select" type="radio"  id="fourth_answer"  value="4">
-            <label for="fourth_answer" class="answer">15</label>
+            <input name="select" type="radio" id="{{ el.id_answer }}"  value="{{ el.id_answer }}">
+            <label for="{{ el.id_answer }}" class="answer">{{ el.answer }}</label>
+        {% endfor %}
     </div>
-<!--        </tr>-->
-<!--    </table>-->
 </form>
 {% endblock %}
