--- a/templates/base_testing.html
+++ b/templates/base_testing.html
@@ -19,7 +19,12 @@
                     {% block body %}{% endblock %}
         </article_test>
         <div class="command">
-                    {% block command %}{% endblock %}
+        <div class="all_command">
+                    {% block all_command %}{% endblock %}
+        </div>
+        <div class="timer_area">
+                    {% block timer_area %}{% endblock %}
+        </div>
         </div>
 
         <footer class="footer">
