Add test report

--- a/static/styles/button.css
+++ b/static/styles/button.css
@@ -59,7 +59,7 @@
 .bt.save:hover{
     color: #307080;
     text-decoration: none;
-    color: lightgoldenrodyellow;
+    color: #fafad2;
     background-color: #20608F;
 }
 .bt.register:hover{
