--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -27,10 +27,10 @@
             <td><a class="label_username">{{ res_value('INSERT_IIN') }}</a></td>
             <td><input class="form_username" type="text" name="username"></td>
         </tr>
-        <tr>
-            <td><a class="label_username">{{ res_value('PASSWORD') }}</a></td>
-            <td><input class="form_password" type="password" name="password"></td>
-        </tr>
+<!--        <tr>-->
+<!--            <td><a class="label_username">{{ res_value('PASSWORD') }}</a></td>-->
+<!--            <td><input class="form_password" type="password" name="password"></td>-->
+<!--        </tr>-->
         <tr>
         <td><input class="bt register" type="submit" value="{{ res_value('START_TEST') }}"></td>
         </tr>
