--- a/templates/testing.html
+++ b/templates/testing.html
@@ -42,7 +42,7 @@
             {% if el.selected == 'Y' %}
                 <input name="select" style="text-decoration: none;" type="radio" id="{{ el.order_num_answer }}"  value="{{ el.order_num_answer }}" checked>
             {% else %}
-                <input name="select" style="text-decoration: none;" type="radio" id="{{ el.order_num_answer }}"  value="{{ el.order_num_answer }}">
+                <input name="select" style="text-decoration: none;" type="radio" id="{{ el.order_num_answer }}"  value="{{ el.order_num_answer }}" disabled>
             {% endif %}
             <label for="{{ el.order_num_answer }}"></label>
             <a  href="/testing/save/{{ el.order_num_answer }}">{{ el.order_num_answer }}.  {{ el.answer }}</a>
