Change remain time counter. Now it show minute and second. Change route on login when remain time=0

--- a/templates/finish.html
+++ b/templates/finish.html
@@ -13,7 +13,7 @@
 <form class="form_register">
     <table>
         <tr>
-            <a class="bt nav"  href="/finish/part">{{ res_value('FINISH') }}</a>
+            <a class="bt nav"  href="/result">{{ res_value('FINISH') }}</a>
             <a class="bt nav"  href="/testing/0">{{ res_value('RETURN_FOR_CHECK') }}</a>
         </tr>
     </table>
