1. Добавлено окно повторного запроса/подтверждения тестирования. 2. Зафиксирован цвет вариантов ответов 3. Обработано пустое флэш-сообщение/предупреждение о наличии неотвеченных вопросов 4. Изменены надписи при завершении тестирования

--- a/static/styles/table_styles.css
+++ b/static/styles/table_styles.css
@@ -9,7 +9,8 @@
 .answer{
     margin: 20px;
     padding: 10px;
-    color: var(--base-color-text);
+    /*color: var(--base-color-text);*/
+    color: black;
     font-weight: normal;
     width: 100%;
 }
