Проведена доп. локализация результата тестирования, сообщения о наличии неотвеченных вопросов, счетчика оставшегося времени

--- a/templates/finish.html
+++ b/templates/finish.html
@@ -16,7 +16,7 @@
         <ul class="flashes">
             {% for msg in messages %}
                 {% if msg %}
-                <li>{{ msg }}</li>
+                <li>{{ res_value('HAVING_UNANSWERED_QUESTIONS') }}: {{ msg }}</li>
                 {% endif %}
             {% endfor %}
         </ul>
