1. Проведена доп. локализация 2. Добавлены кнопки перехода на первый и последний вопросы тестового задания 3. Доработана PLSQL процедура для обработки новых и измененных событий перехода.

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
             <div><a></a></div>
             <div class="header-r">
                    {% if session['language'] == 'ru' %}
-                            <a href="/language/kz">ҚАЗ</a>
+                            <a href="/language/kz">{{ res_value('GOTO_KAZ_LANG') }}</a>
                     {% else %}
-                            <a href="/language/ru">РУС</a>
+                            <a href="/language/ru">{{ res_value('GOTO_RUS_LANG') }}</a>
                    {% endif %}
                   {% if g.user.is_anonymous == True %}
                             <a href="/login">{{ res_value('LOGIN') }}</a>
@@ -57,7 +57,7 @@
               <div class="footer-r">
                   <small style="visibility: hidden">{{ res_value('CREATORS') }}</small>
                   <small style="visibility: hidden">{{ res_value('FOR_DEVELOPERS') }}</small>
-                  <a style="font-size:14px">{% if g.user.is_authenticated %} {{ g.user.username }} {% endif %}</a>
+                  <a style="font-size:14px">{% if g.user.is_authenticated %} {{ res_value('USER_IDENTIFY')}}:&nbsp{{ g.user.username }} {% endif %}</a>
               </div>
         </footer>
     </div>
