--- a/templates/result.html
+++ b/templates/result.html
@@ -50,7 +50,7 @@
              <th>№</th>
              <th style="text-align: left"><a class="title2">{{ res_value('THEME_NAME') }}</a></th>
              <th><a class="title2">{{ res_value('COUNT_QUESTION') }}</a></th>
-             <th><a class="title2">{{ res_value('COUNT_FOR_SUCCESS') }}</a></th>
+<!--             <th><a class="title2">{{ res_value('COUNT_FOR_SUCCESS') }}</a></th>-->
              <th><a class="title2">{{ res_value('COUNT_TRUE') }}</a></th>
              <th><a class="title2">{{ res_value('COUNT_FALSE') }}</a></th>
         </thead>
@@ -60,7 +60,7 @@
              <td><a class="title2">{{ el.theme_number }}</a></td>
              <td style="text-align: left"><a class="title2">{{ el.theme_name }}</a></td>
              <td><a class="title2">{{ el.count_question }}</a></td>
-             <td><a class="title2">{{ el.count_success }}</a></td>
+<!--             <td><a class="title2">{{ el.count_success }}</a></td>-->
              <td><a class="title2">{{ el.true_score }}</a></td>
              <td><a class="title2">{{ el.false_score }}</a></td>
             </tr>
