--- a/templates/result.html
+++ b/templates/result.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block all_command %}
-    <a class="bt_command nav"  href="/uploads/{{ result_file }}">{{ res_value('PRINT_RESULT') }}</a>
+<!--    <a class="bt_command nav"  href="/uploads/{{ result_file }}">{{ res_value('PRINT_RESULT') }}</a>-->
     <a class="bt_command nav"  href="/">{{ res_value('EXIT') }}</a>
 {% endblock %}
 
