--- a/templates/testing.html
+++ b/templates/testing.html
@@ -37,7 +37,7 @@
 
 {% block all_command %}
     <a class="bt_command nav"  href="/testing/0">{{ res_value('FIRST_QUESTION') }}</a>
-    <a class="bt_command nav"  href="/testing/1">{{ res_value('FIRST_PART_QUESTION_') }}</a>
+    <a class="bt_command nav"  href="/testing/1">{{ res_value('FIRST_PART_QUESTION') }}</a>
     <a class="bt_command nav"  href="/testing/2">{{ res_value('PREV_QUESTION') }}</a>
     <a class="bt_command nav"  href="/testing/12">{{ res_value('NEXT_QUESTION') }}</a>
     <a class="bt_command nav"  href="/testing/11">{{ res_value('LAST_PART_QUESTION') }}</a>
