--- a/templates/base_testing.html
+++ b/templates/base_testing.html
@@ -10,7 +10,8 @@
     <div class = "common-testing-container">
         <header class="header">
             <div><a>{{ res_value('APP_NAME') }}</a></div>
-            <div><a></a></div>
+            <div><a>{% block checking_title %}{% endblock %}
+            </a></div>
             <div class="header-r">
                    {% if session['language'] == 'ru' %}
                             <a href="/language/kz">{{ res_value('GOTO_KAZ_LANG') }}</a>
